# axum-todo-app

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/middlewares/: access_logger.rs  mod.rs  normalize_trailing_slash.rs
src/models/: api_state.rs  mod.rs  task.rs
src/routes/: api_router.rs  main_router.rs  mod.rs  web_router.rs
src/server/: server.rs
static/: main.html
static/scripts/: delete.js  list.js  search.js  send.js  update.js
static/styles/: common.css
templates/: about.html  add_task.html  all_tasks.html  delete_task.html  home.html  search_task.html  update_task.html
templates/includes/: head.html  header.html
