[package]
name = "todo-list"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version="1", features = ["full"] }
axum = "0.8.1"
serde = { version="1.0.218", features = ["derive"] }
tower = { version="0.5.2", features = ["full"] }
tower-layer = "0.3.3"
tower-http = { version= "0.6.2", features = ["fs", "trace"] }
tera = "1.20.0"
